@@ -59,13 +59,12 @@ CMulticlassLabels* CC45ClassifierTree::apply_multiclass(CFeatures* data)
 	return ret;
 }
 
-bool CC45ClassifierTree::prune_tree(CDenseFeatures<float64_t>* validation_data, CMulticlassLabels* validation_labels, float64_t epsilon)
+void CC45ClassifierTree::prune_tree(CDenseFeatures<float64_t>* validation_data, CMulticlassLabels* validation_labels, float64_t epsilon)
 {
 	node_t* current=get_root();
 	prune_tree_from_current_node(validation_data,validation_labels,current,epsilon);
 
 	SG_UNREF(current);
-	return true;
 }
 
 SGVector<float64_t> CC45ClassifierTree::get_certainty_vector() const
