@@ -12,6 +12,7 @@
 		- Add Principal Component Analysis notebook [Abhijeet Kislay]
 		- Add Multiple Kernel Learning notebook [Saurabh Mahindre]
 		- Add Multi-Label classes to enable Multi-Label classification [Thoralf Klein]
+		- Add C4.5 algorithm for multiclass classification using decision trees [Parijat Mazumdar]
 	* Bugfixes:
 		- Fix reference counting bugs in CList when reference counting is on [Heiko Strathmann, Thoralf Klein, lambday]
 		- Fix memory problem in PCA::apply_to_feature_matrix [Parijat Mazumdar]
